ingressroute-2.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoamiv1-2
  namespace: app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`app-whoami-2.tee.aws.traefiklabs.tech`)
      services:
        - kind: Service
          name: whoamiv1
          namespace: app
          port: 80
  tls:
    certResolver: vaultpki
